# ObserveDemo

./: .gitignore  CMakeLists.txt  bpf_logging.h  bpf_wapper_helper.h  main.c  perf_wapper_helper.h  readelf_  run_clean.sh
ReadElf/: readelf.c
TestProg/: aprog_main.c
